--- a/app.json
+++ b/app.json
@@ -1,4 +1,34 @@
 {
-  "name": "NeideCosmeticos",
-  "displayName": "NeideCosmeticos"
+  "expo": {
+    "name": "Neide Cosméticos",
+    "slug": "neide-cosmeticos",
+    "version": "1.0.0",
+    "orientation": "portrait",
+    "icon": "./src/assets/logo.png",
+    "userInterfaceStyle": "light",
+    "splash": {
+      "image": "./src/assets/logo.png",
+      "resizeMode": "contain",
+      "backgroundColor": "#ffe4ec"
+    },
+    "assetBundlePatterns": [
+      "**/*"
+    ],
+    "ios": {
+      "supportsTablet": true,
+      "jsEngine": "hermes"
+    },
+    "android": {
+      "adaptiveIcon": {
+        "foregroundImage": "./src/assets/logo.png",
+        "backgroundColor": "#ffe4ec"
+      },
+      "jsEngine": "hermes"
+    },
+    "web": {
+      "favicon": "./src/assets/logo.png",
+      "bundler": "metro"
+    },
+    "jsEngine": "hermes"
+  }
 }
