--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "expo-font": "^13.3.1",
     "expo-linear-gradient": "~14.1.5",
     "expo-status-bar": "~2.2.3",
+    "lucide-react-native": "^0.515.0",
     "react": "19.0.0",
     "react-dom": "19.0.0",
     "react-native": "0.79.3",
@@ -31,6 +32,7 @@
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
+    "@react-native-community/cli": "latest",
     "@types/jest": "^29.5.14",
     "@types/react": "~19.0.10",
     "@types/react-native": "^0.72.8",
