--- a/package.json
+++ b/package.json
@@ -9,34 +9,40 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "@expo-google-fonts/montserrat": "^0.4.1",
-    "@expo/metro-runtime": "~5.0.4",
-    "@expo/vector-icons": "^14.0.4",
-    "@react-native-async-storage/async-storage": "^2.2.0",
-    "@react-navigation/bottom-tabs": "^6.6.1",
-    "@react-navigation/native": "^6.1.18",
-    "expo": "~53.0.0",
+    "@expo/metro-runtime": "^5.0.4",
+    "@expo/vector-icons": "^14.0.0",
+    "@react-native-async-storage/async-storage": "^2.1.2",
+    "@react-navigation/bottom-tabs": "^6.5.11",
+    "@react-navigation/native": "^6.1.9",
+    "expo": "^53.0.11",
     "expo-font": "^13.3.1",
-    "expo-linear-gradient": "~14.1.5",
-    "expo-status-bar": "~2.2.3",
+    "expo-linear-gradient": "^14.1.5",
+    "expo-status-bar": "^2.2.3",
     "lucide-react-native": "^0.515.0",
-    "react": "19.0.0",
-    "react-dom": "19.0.0",
-    "react-native": "0.79.3",
+    "metro-resolver": "^0.82.4",
+    "react": "^19.0.0",
+    "react-dom": "^19.0.0",
+    "react-native": "^0.79.3",
     "react-native-chart-kit": "^6.12.0",
-    "react-native-safe-area-context": "5.4.0",
-    "react-native-screens": "~4.11.1",
-    "react-native-svg": "^15.12.0",
-    "react-native-url-polyfill": "^2.0.0",
+    "react-native-safe-area-context": "^5.4.0",
+    "react-native-screens": "^4.11.1",
+    "react-native-svg": "^15.11.2",
     "react-native-web": "^0.20.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.25.2",
+    "@babel/core": "^7.20.0",
+    "@expo/metro-config": "^0.20.14",
     "@react-native-community/cli": "latest",
-    "@types/jest": "^29.5.14",
-    "@types/react": "~19.0.10",
-    "@types/react-native": "^0.72.8",
-    "typescript": "^5.8.3"
+    "@types/jest": "^29.5.11",
+    "@types/react": "^19.0.10",
+    "@types/react-native": "^0.73.0",
+    "metro": "^0.82.4",
+    "metro-cache": "^0.82.4",
+    "metro-config": "^0.82.4",
+    "metro-core": "^0.82.4",
+    "metro-runtime": "^0.82.4",
+    "metro-source-map": "^0.82.4",
+    "typescript": "^5.3.0"
   },
   "private": true
 }
